[CSS] Tweak styles

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -30,7 +30,7 @@ h1 {
     font-size: 32px;
     font-weight: normal;
     line-height: 1.2;
-    margin: 48px 0;
+    margin: 48px 0 16px;
 }
 
 summary {
