[CSS] Tweak styles

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -7,8 +7,9 @@ body {
     color: #252525;
     font-family: "Tablet Gothic", sans-serif;
     line-height: 1.5;
-    margin: 0;
+    margin: auto;
     min-width: 320px;
+    max-width: 900px;
     padding: 1em;
 }
 
