--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -9,6 +9,7 @@
 
 .settings__label {
     display: grid;
+    margin: 8px 0;
     grid-column-gap: 16px;
     grid-template-columns: 52px 24px auto;
     text-transform: capitalize;
