--- a/src/styles/_player.scss
+++ b/src/styles/_player.scss
@@ -13,6 +13,7 @@
     padding: 0 1em;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 
 $play-button-size: 40px;
@@ -25,7 +26,7 @@ $play-button-size: 40px;
     font-size: 1rem;
     height: $play-button-size;
     line-height: $play-button-size;
-    margin: 18px 16px 18px 0;
+    margin: 24px 0;
     text-align: center;
     width: $play-button-size;
     flex-shrink: 0;
@@ -66,6 +67,7 @@ $play-button-size: 40px;
 .player__track-info {
     width: 100%;
     color: #fff;
+    margin: 0 24px;
 }
 
 .player__track {
@@ -88,12 +90,25 @@ $play-button-size: 40px;
 .player__progress {
     display: flex;
     position: relative;
+    justify-content: space-between;
+    margin: 8px 0;
 
     .timer {
-        position: absolute;
-        right: 0;
-        bottom: 16px;
-        font-size: 14px;
+        font-size: 12px;
+        width: 50px;
+        margin-right: 8px;
+    }
+
+    .time-estimate {
+        font-size: 12px;
+        width: 50px;
+        margin-left: 8px;
+        text-align: right;
+
+        &::before {
+            content: '~';
+            margin-right: 2px;
+        }
     }
 }
 
@@ -123,7 +138,6 @@ $play-button-size: 40px;
 }
 
 .player__playlist-button {
-    margin-left: 1rem;
     background: none;
     border: 0;
     color: #fff;
