--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -28,3 +28,4 @@ $color-progress-background: $grey;
 $color-teaser-heading: $red;
 $color-player-bg: $grey--mid;
 $color-play-button-disabled: $charcoal;
+$color-play-button: $grey--mid-dark;
