--- a/src/styles/_player.scss
+++ b/src/styles/_player.scss
@@ -14,55 +14,12 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-}
 
-$play-button-size: 40px;
-
-.player__playbutton {
-    background-color: #fff;
-    border-radius: 50%;
-    border: 0;
-    color: inherit;
-    font-size: 1rem;
-    height: $play-button-size;
-    line-height: $play-button-size;
-    margin: 24px 0;
-    text-align: center;
-    width: $play-button-size;
-    flex-shrink: 0;
-
-    &[disabled] {
-        background-color: $color-play-button-disabled;
+    .play-button {
+        margin: 24px 0;
+        flex-shrink: 0;
     }
 }
-
-.player__pause {
-    display: inline-block;
-    height: 1em;
-    position: relative;
-    width: 1em;
-
-    &::before,
-    &::after {
-        background-color: currentColor;
-        border-radius: 3px;
-        content: '';
-        height: 100%;
-        position: absolute;
-        top: 0;
-        width: 6px;
-    }
-
-    &::before {
-        left: 0;
-    }
-
-    &::after {
-        right: 0;
-    }
-}
-
-
 
 .player__track-info {
     width: 100%;
