--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,10 +3,10 @@
 
 @import 'base';
 @import 'fonts';
+@import 'icon-button';
 @import 'header';
 @import 'settings';
 @import 'teaser';
 @import 'player';
 @import 'timer';
 @import 'time-estimate';
-@import 'play-button';
