[Player] Fix track not changing

--- a/src/styles/_player.scss
+++ b/src/styles/_player.scss
@@ -43,6 +43,8 @@
 }
 
 .player__kicker {
+    display: inline-block;
+    height: 12px;
     font-size: 12px;
     letter-spacing: .05em;
     font-weight: normal;
