--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -35,6 +35,7 @@ $zon-ozeanblau--4: #085064;
 // General Colors
 $color-link: $zon-rubinrot--3;
 $color-text: $zon-silbergrau--4;
+$color-play-button-hover: $zon-rubinrot--3;
 
 // Teaser Colors
 $color-teaser-heading: $zon-rubinrot--3;
@@ -44,6 +45,7 @@ $color-teaser-separator: $zon-silbergrau--2;
 // Player Colors
 $color-player-bg: $zon-betongrau--3;
 $color-player-button: $zon-silbergrau--4;
+$color-player-button-hover: $zon-ozeanblau--2;
 $color-player-button-bg: $zon-silbergrau--1;
 $color-player-button-disabled: $zon-betongrau--3;
 $color-player-button-bg-disabled: $zon-betongrau--1;
