--- a/src/styles/_player.scss
+++ b/src/styles/_player.scss
@@ -17,11 +17,11 @@
 
     .icon-button {
         background-color: $color-player-button-bg;
-        color: $color-player-button;
         margin: 24px 0;
         flex-shrink: 0;
 
-        &:disabled {
+        &:disabled,
+        &:disabled:hover {
             color: $color-player-button-disabled;
             background-color: $color-player-button-bg-disabled;
         }
@@ -109,4 +109,13 @@
 
 .player__buttons {
     flex-shrink: 0;
+
+    .icon-button {
+        background: none;
+        color: white;
+
+        &:hover {
+            color: $color-player-button-hover
+        }
+    }
 }
