[TeaserText] Rename to TextDisplay and display in Player

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -53,3 +53,6 @@ $color-player-button-bg-disabled: $zon-betongrau--1;
 // Progress Bar Colors
 $color-progress-value: $zon-rubinrot--2;
 $color-progress-background: $zon-betongrau--1;
+
+// Text Display Colors
+$color-text-display-marked: $zon-rubinrot--3;
