--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,3 +11,5 @@
 @import 'timer';
 @import 'time-estimate';
 @import 'text-display';
+
+@import 'transitions'; // Keep at the bottom to ensure precendece
