Fix progress-bar and time estimate

--- a/src/styles/_icon-button.scss
+++ b/src/styles/_icon-button.scss
@@ -8,6 +8,7 @@ $button-size: 40px;
     width: $button-size;
     color: currentColor;
     margin: 0;
+    background: #fff;
 
     svg {
         width: $button-size;
