Refactor Player & extract TrackInfo and PlayerContext

--- a/src/styles/_player.scss
+++ b/src/styles/_player.scss
@@ -27,6 +27,12 @@
         }
     }
 
+    .icon-button--playlist:disabled,
+    .icon-button--playlist:disabled:hover {
+        background: none;
+        color: $color-player-button-bg-disabled;
+    }
+
     .icon-button--settings {
         margin-left: 12px;
     }
