--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -37,6 +37,9 @@ $color-link: $zon-rubinrot--3;
 $color-text: $zon-silbergrau--4;
 $color-play-button-hover: $zon-rubinrot--3;
 
+// Header Colors
+$color-header-border: $zon-silbergrau--2;
+
 // Teaser Colors
 $color-teaser-heading: $zon-rubinrot--3;
 $color-teaser-info: $zon-betongrau--2;
