--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,6 +8,7 @@
 @import 'settings';
 @import 'teaser';
 @import 'player';
+@import 'player-context';
 @import 'timer';
 @import 'time-estimate';
 @import 'text-display';
