Show error when Speech Synthesis is not available

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,5 +12,6 @@
 @import 'timer';
 @import 'time-estimate';
 @import 'text-display';
+@import 'error-screen';
 
 @import 'transitions'; // Keep at the bottom to ensure precendece
