--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,4 +14,4 @@
 @import 'text-display';
 @import 'error-screen';
 
-@import 'transitions'; // Keep at the bottom to ensure precendece
+@import 'transitions'; // Keep at the bottom to ensure precedence
