--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -14,7 +14,13 @@ body {
     color: $color-text;
     font-family: "Tablet Gothic", sans-serif;
     line-height: 1.5;
-    margin: 0 auto 5rem;
+    margin: 0;
+    padding: 0;
+}
+
+main {
+    margin: 0 auto;
+    min-height: 100vh;
     min-width: 320px;
     max-width: 900px;
     padding: 1em;
